test/bad/generics/type01.px

func f<T>(T x) Int def
    return x

f("0")
